--- a/Javascript_Assignment/JAVASCRIPT_LAB/Task4.html
+++ b/Javascript_Assignment/JAVASCRIPT_LAB/Task4.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        let num = 0;  // Change the value to test
+        let num = 0;  
 
         if (num > 0) {
             console.log("The number is Positive");
@@ -17,7 +17,7 @@
             console.log("The number is Zero");
         }
 
-        let day = 3;  // Change the number (1–7)
+        let day = 3;  
 
 switch (day) {
     case 1:
@@ -47,4 +47,5 @@ switch (day) {
 
     </script>
 </body>
+
 </html>
